@@ -1,8 +1,11 @@
 Changes since version 2.1.0
 ---------------------------
 
-- Fixed a race condition that could cause a process to abort
-  during shutdown.
+- Modified the Ice marshaling engine so that references to Ice objects
+  are released as soon as possible.
+
+- Fixed a race condition that could cause a process to abort during
+  shutdown.
 
 - Added sequences of fixed-length elements to throughput demo.
 
